...
                            }
                        }
                        .padding(.vertical, 2)
                    }
                }
            }
            .navigationTitle("Repositories")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button("Add") {
                        // TODO: Add repository functionality
                    }
                }
...
